Added new mock-up screens to Project-description-v0.2

--- a/1ο Παραδοτέο/Project-Description/v0.2/Files/Project-description-v0.2.tex
+++ b/1ο Παραδοτέο/Project-Description/v0.2/Files/Project-description-v0.2.tex
@@ -85,57 +85,63 @@
 
 \textbf{Σημέιωση:} Οι οθόνες στο κεφάλαιο αυτό είναι ενδεικτικές και δεν θα αποτελούν αναγκαστικά την ακριβή δομή του τελικού project. Λειτουργούν παραπάνω για ένδειξη του περιεχομένου της τελικής οθόνης και όροι όπως "στο κάτω μέρος της οθόνης" αναφέρονται μόνο στη δομή του σχήματος που δίνεται και όχι αναγκαστικά του τελικού project.
 
-\subsection{Rent Book:}
+\subsection{Search Book}
 
-Στο Σχήμα \ref{Οθόνη "Rent Book" λειτουργικότητας} παρουσιάζεται mock-up οθόνη της λειτουργικότητας της ενοικίασης βιβλίων.
+Για την οθόνη της αναζήτησης έχουμε ορίσει τρεις περιπτώσεις (με βάση τα φίλτρα που εισάγει ο χρήστης), οι οποίες αποτελούν τα σχήματα \ref{Οθόνη "Search Book" λειτουργικότητας},
 
-\begin{figure}[H]
-	\makebox[\textwidth]{\includegraphics[width=\textwidth]{Mockup Screens/Rent Book.png}}
-	\caption{Οθόνη "Rent Book" λειτουργικότητας}
-	\label{Οθόνη "Rent Book" λειτουργικότητας}
-\end{figure}
+\subsubsection{Αναζήτηση Βιβλίου}
 
-Η οθόνη αυτή περιέχει έναν πίνακα με στήλες με τίτλους "Title", "Author", "Owner", "Delivery Way" και ένα κουμπί "Request Rental". 
-
-Η λειτουργικότητα του "Request Rental" είναι αυτή που εξηγείται ως "αίτηση ενοικίασης" στο κεφάλαιο \ref{Περιγραφή}.
-
-Τα κελιά του πίνακα στη τελική έκδοση θα περιέχουν όλα τα διαθέσιμα βιβλία και τις πληροφορίες τους ανά στήλη, μαζί με την τιμή ενοικίασης ανά ημέρα (κάτω από το "Request Rental").
-
-Επίσης υπάρχει και λειτουργία αναζήτησης συγκεκριμένου βιβλίου στο κάτω μέρος της οθόνης.
-
-\subsection{User Search}
-
-Στο Σχήμα \ref{Οθόνη "User Search" λειτουργικότητας} παρουσιάζεται mock-up οθόνη της λειτουργικότητας της αναζήτησης χρηστών.
+Στο Σχήμα \ref{Οθόνη "Search Book" λειτουργικότητας} παρουσιάζεται mock-up οθόνη της λειτουργικότητας της αναζήτησης βιβλίων και της δημιουργίας αίτησης ενοικίασης.
 
 \begin{figure}[H]
-	\makebox[\textwidth]{\includegraphics[width=\textwidth]{Mockup Screens/User Search.png}}
-	\caption{Οθόνη "User Search" λειτουργικότητας}
-	\label{Οθόνη "User Search" λειτουργικότητας}
+	\makebox[\textwidth]{\includegraphics[width=\textwidth]{Mockup Screens/Search Book.png}}
+	\caption{Οθόνη "Search Book" λειτουργικότητας}
+	\label{Οθόνη "Search Book" λειτουργικότητας}
 \end{figure}
 
-Παρατηρούμε ότι η οθόνη αυτή περιέχει έναν πίνακα με στήλες με τίτλους "Name", "Address", "Num of Books" "Delivery Way" και ένα κουμπί "View Books". 
+Ο χρήστης δίπλα σε κάθε βιβλίο έχει τη δυνατότητα να πατήσει το drop down μενού, οπότε μετά του εμφανίζονται οι ιδιοκτήτες που έχουν διαθέσιμο το βιβλίο προς ενοικίαση.
 
-Το κουμπί "View Books" μεταβιβάζει τον χρήστη σε μια σελίδα όπως τη σελίδα του "Rent Book" (Σχήμα \ref{Οθόνη "Rent Book" λειτουργικότητας} που θα περιέχει μόνο τα βιβλία του χρήστη που επιλέχθηκε.
+Η λειτουργικότητα του "Rent" είναι αυτή που εξηγείται ως "αίτηση ενοικίασης" στο κεφάλαιο \ref{Περιγραφή}.
 
-Τα κελιά του πίνακα στη τελική έκδοση θα περιέχουν όλους τους χρήστες που πληρούν την αναζήτηση και τις πληροφορίες τους ανά στήλη.
+\subsubsection{Search User}
 
-Επίσης υπάρχει και λειτουργία αναζήτησης συγκεκριμένου χρήστη στο κάτω μέρος της οθόνης.
-
-\subsection{Review Peers}
-
-Στο Σχήμα \ref{Οθόνη "Review peers" λειτουργικότητας} παρουσιάζεται mock-up οθόνη της λειτουργικότητας του Review άλλων χρηστών.
+Στο Σχήμα \ref{Οθόνη "Search User" λειτουργικότητας} παρουσιάζεται mock-up οθόνη της λειτουργικότητας της αναζήτησης χρηστών.
 
 \begin{figure}[H]
-	\makebox[\textwidth]{\includegraphics[width=\textwidth]{Mockup Screens/Review Peers.png}}
-	\caption{Οθόνη "Review peers" λειτουργικότητας}
-	\label{Οθόνη "Review peers" λειτουργικότητας}
+	\makebox[\textwidth]{\includegraphics[width=\textwidth]{Mockup Screens/Search User.png}}
+	\caption{Οθόνη "Search User" λειτουργικότητας}
+	\label{Οθόνη "Search User" λειτουργικότητας}
 \end{figure}
 
-Παρατηρούμε ότι η οθόνη αυτή περιέχει έναν πίνακα με στήλες με τα ονόματα των χρηστών με τους οποίους έχουν γίνει προηγούμενες συναλλαγές, και το βιβλίο που ενοικιάστηκε.
+Ο χρήστης έχει επίσης έχει τη δυνατότητα να τον προσθέσει στη λίστα των αγαπημένων του, καθώς και να προβάλλει τα διαθέσιμα βιβλία που έχει προς ενοικίαση, μέσω του drop down μενού. 
 
-Επίσης φαίνεται και ένα γραφικό δίπλα σε κάθε συναλλαγή με λειτουργικότητα της κριτικής του άλλου χρήστη από 1 έως 5 "αστεράκια".
+Πατώντας έπειτα το κουμπί "Rent", γίνεται πάλι αίτηση ενοικίασης.
 
-Τα κελιά του πίνακα στη τελική έκδοση θα περιέχουν όλους τους χρήστες και τα βιβλία για τις προηγούμενες συναλλαγές που έχουν γίνει.
+\subsubsection{Search Requests}
+
+Στο Σχήμα \ref{Οθόνη "Search Requests" λειτουργικότητας} παρουσιάζεται mock-up οθόνη της λειτουργικότητας της αναζήτησης αιτήσεων που έχουν κάνει άλλοι χρήστες.
+
+\begin{figure}[H]
+	\makebox[\textwidth]{\includegraphics[width=\textwidth]{Mockup Screens/Search Request.png}}
+	\caption{Οθόνη "Search Requests" λειτουργικότητας}
+	\label{Οθόνη "Search Requests" λειτουργικότητας}
+\end{figure}
+
+Ο χρήστης στην οθόνη αυτή μπορεί να προβάλλει και να αναζητεί τις αιτήσεις άλλων χρηστών και έχει τη δυνατότητα να δεχτεί τις αιτήσεις αυτές αν έχει το βιβλίο που ζητείται. Μέσω του κουμπιού "Accept" δημιουργείται μια νέα συναλλαγή με τον χρήστη που αιτεί το βιβλίο.
+
+\subsection{Dashboard}
+
+Στο Σχήμα \ref{Οθόνη "Dashboard" λειτουργικότητας} παρουσιάζεται mock-up οθόνη της οθόνης "Dashboard" που δείχνει τις τρέχουσες συναλλαγές με δυνατότητα χειρισμού του και ανανέωσης της κατάστασης στις οποίες βρίσκονται.
+
+\begin{figure}[H]
+	\makebox[\textwidth]{\includegraphics[width=\textwidth]{Mockup Screens/Dashboard.png}}
+	\caption{Οθόνη "Dashboard" λειτουργικότητας}
+	\label{Οθόνη "Dashboard" λειτουργικότητας}
+\end{figure}
+
+Παρατηρούμε ότι στους πίνακες έχουμε το πεδίο "Situation" στο οποίο αναφέρεται η κατάσταση στην οποία βρίσκεται η συναλλαγή (πχ αναμονή για αποδοχή από τον ιδιοκτήτη, αναμονή για επιστροφή κτλ).
+
+Επίσης με το πεδίο "Change Situation" έχουμε παραθέσει τα κουμπιά με τα οποία ο χρήστης αλλάζει τις καταστάσεις (πχ αποδοχή αιτήματος, δήλωση επιστροφής βιβλίου κτλ).
 
 \subsection{My Listings}
 
@@ -147,27 +153,31 @@
 	\label{Οθόνη "My Listings" λειτουργικότητας}
 \end{figure}
 
-Παρατηρούμε ότι η οθόνη αυτή περιέχει έναν πίνακα με στήλες με τίτλους "Title", "Author", "Owner", "Delivery Way" και κουμπιά "Remove Listing" και στο τέλος της σελίδας ένα κουμπί "Add Listing", όπου πλέον ο χρήστης συμπληρώνει τα στοιχεία του βιβλίου που θα νοικιάσει σε ένα popup screen.
-
-Τα κελιά του πίνακα στη τελική έκδοση θα περιέχουν το σύνολο των βιβλίων που προσφέρει ο συνδεδεμένος χρήστης για ενοικίαση από άλλους.
-
-\subsection{Requests}
-
-Στο Σχήμα \ref{Οθόνη "Requests" λειτουργικότητας} παρουσιάζεται mock-up οθόνη της λειτουργικότητας της προβολής αιτήσεων άλλων και της αποδοχή τους (δηλαδή προσφοράς του βιβλίου στον χρήστη που το ζητάει και έκανε την αίτηση και αποδοχή του χρηματικού αντίτιμου). Επίσης στο κάτω μέρος της σελίδας υπάρχει ένα κουμπί που προσφέρει λειτουργικότητα δημιουργίας νέας αίτησης.
+Πατώντας το κουμπί "Edit" ή το κουμπί "Add Listing" εμφανίζεται pop up οθόνη στην οποία ο χρήστης αλλάζει ή προσθέτει αντίστοιχα τα στοιχεία του βιβλίου, την τιμή και το τρόπο συναλλαγής. Ένα mock up screen της οθόνης αυτής φαίνεται στο Σχήμα \ref{Οθόνη "Add Book Details" λειτουργικότητας}.
 
 \begin{figure}[H]
-	\makebox[\textwidth]{\includegraphics[width=\textwidth]{Mockup Screens/Request.png}}
-	\caption{Οθόνη "Requests" λειτουργικότητας}
-	\label{Οθόνη "Requests" λειτουργικότητας}
+	\makebox[\textwidth]{\includegraphics[width=\textwidth]{Mockup Screens/Add Book Details Popup.png}}
+	\caption{Οθόνη "Add Book Details" λειτουργικότητας}
+	\label{Οθόνη "Add Book Details" λειτουργικότητας}
 \end{figure}
 
-Παρατηρούμε ότι η οθόνη αυτή περιέχει έναν πίνακα με στήλες με τίτλους "Title", "Author", "Owner", "Delivery Way", "User", "Bounty" και κουμπιά "Claim Request" και στο τέλος της σελίδας το κουμπί "Add Requests", όπου πλέον ο χρήστης συμπληρώνει τα στοιχεία του βιβλίου που ζητάει να νοικιάσει σε ένα popup screen.
 
-Τα κελιά του πίνακα στη τελική έκδοση θα περιέχουν το σύνολο των στοιχείων για τα requests που είναι ενεργά εκείνη τη χρονική στιγμή.
+\subsection{My Requests}
+
+Στο Σχήμα \ref{Οθόνη "My Requests" λειτουργικότητας} παρουσιάζεται mock-up οθόνη της λειτουργικότητας της προβολή των αιτήσεων που έχει κάνει ο χρήστης, μαζί με δυνατότητα προσθήκης και αφαίρεσής τους.
+
+\begin{figure}[H]
+	\makebox[\textwidth]{\includegraphics[width=\textwidth]{Mockup Screens/My Requests.png}}
+	\caption{Οθόνη "My Requests" λειτουργικότητας}
+	\label{Οθόνη "My Requests" λειτουργικότητας}
+\end{figure}
+
+Πατώντας το κουμπί "Edit" ή το κουμπί "Add Request" εμφανίζεται pop up οθόνη στην οποία ο χρήστης αλλάζει ή προσθέτει αντίστοιχα τα στοιχεία της αίτησης, η οποία θα μοιάζει πάλι σαν την οθόνη του Σχήματος \ref{Οθόνη "Add Book Details" λειτουργικότητας}.
+
 
 \subsection{Transaction History}
 
-Στο Σχήμα \ref{Οθόνη "Transaction History" λειτουργικότητας} παρουσιάζεται mock-up οθόνη της λειτουργικότητας της προβολής συναλλαγών (προηγούμενων και τρεχόντων) καθώς και της αποδοχής ή απόρριψης αιτημάτων και ανανέωσης κατάστασης κατοχής βιβλίου (δηλαδή ανανεώνεται όταν έχει φτάσει το βιβλίο στον ενοικιαστή και πίσω στον ιδιοκτήτη).
+Στο Σχήμα \ref{Οθόνη "Transaction History" λειτουργικότητας} παρουσιάζεται mock-up οθόνη της λειτουργικότητας της προβολής των τελειωμένων συναλλαγών, μαζί με τη δυνατότητα προβολής στατιστικών και την δυνατότητα επιλογής φίλτρων για την αναζήτηση στο ιστορικό.
 
 \begin{figure}[H]
 	\makebox[\textwidth]{\includegraphics[width=\textwidth]{Mockup Screens/Transaction History.png}}
@@ -175,37 +185,41 @@
 	\label{Οθόνη "Transaction History" λειτουργικότητας}
 \end{figure}
 
-Παρατηρούμε ότι η οθόνη αυτή περιέχει έναν πίνακα με στήλες με τίτλους "Title", "Author", "Owner", "Delivery Way", "Transaction Status" και εναλλακτικά κουμπιά "Accept Request" και "Deny Request" ή "Toggle Possession Status" ή κανένα κουμπί, αντίστοιχα με την κατάσταση της συναλλαγής, όπως αναφέρεται στο κεφάλαιο \ref{Περιγραφή}.
+Στην οθόνη αυτή υπάρχει επίσης η δυνατότητα για τον χρήστη να προσθέσει τον άλλο χρήστη με τον οποίο έκανε τη συναλλαγή στη λίστα αγαπημένων του, και την καταχώρηση αξιολόγησης για τον χρήστη αυτόν, με τη μορφή ενός έως πέντε "αστεράκια" και προαιρετική εισαγωγή σχολίου.
 
-Τα κελιά του πίνακα στη τελική έκδοση θα περιέχουν όλο το ιστορικό των συναλλαγών για τον χρήστη που είναι συνδεδεμένος.
-
-\subsection{Profile}
-
-Στο Σχήμα \ref{Οθόνη "Profile" λειτουργικότητας} παρουσιάζεται mock-up οθόνη της λειτουργικότητας της προβολής και αλλαγής των στοιχείων του λογαριασμού του συνδεδεμένου χρήστη.
+Στο Σχήμα \ref{Οθόνη "Star Rating" λειτουργικότητας} φαίνεται η δυνατότητα αξιολόγησης με τα "αστεράκια" και στο Σχήμα \ref{Οθόνη "Comment Rating" λειτουργικότητας} φαίνεται η δυνατότητα συγγραφής του προαιρετικού σχολίου.
 
 \begin{figure}[H]
-	\makebox[\textwidth]{\includegraphics[width=\textwidth]{Mockup Screens/Profile.png}}
-	\caption{Οθόνη "Profile" λειτουργικότητας}
-	\label{Οθόνη "Profile" λειτουργικότητας}
+    \makebox[\textwidth]{\fbox{\includegraphics[width=\textwidth]{Mockup Screens/Star Rating.png}}}
+	\caption{Οθόνη "Star Rating" λειτουργικότητας}
+	\label{Οθόνη "Star Rating" λειτουργικότητας}
 \end{figure}
 
-Παρατηρούμε ότι η οθόνη αυτή περιέχει έναν πίνακα με γραμμές με τίτλους "Username", "Email", "Address" και "Phone". Στη δεξιά μεριά του πίνακα προβάλλονται κάθε φορά τα στοιχεία του χρήστη.
+\begin{figure}[H]
+    \makebox[\textwidth]{\fbox{\includegraphics[width=\textwidth]{Mockup Screens/Comment Rating.png}}}
+	\caption{Οθόνη "Comment Rating" λειτουργικότητας}
+	\label{Οθόνη "Comment Rating" λειτουργικότητας}
+\end{figure}
 
-Στη κάτω μεριά της οθόνης υπάρχει ένα κουμπί "Edit" το οποίο επιτρέπει στον χρήστη να ανανεώσει τα στοιχεία του.
+\subsection{Profile και Balance}
 
-\subsection{Balance}
-
-Στο Σχήμα \ref{Οθόνη "Balance" λειτουργικότητας} παρουσιάζεται mock-up οθόνη της λειτουργικότητας της προβολής χρημάτων στον λογαριασμό και της προσθήκης και αφαίρεσης χρηματικού ποσού από τον λογαριασμό.
+Στο Σχήμα \ref{Οθόνη "My Profile" λειτουργικότητας} παρουσιάζεται mock-up οθόνη της λειτουργικότητας της προβολής και αλλαγής των στοιχείων του λογαριασμού του συνδεδεμένου χρήστη.
 
 \begin{figure}[H]
-	\makebox[\textwidth]{\includegraphics[width=\textwidth]{Mockup Screens/Balance.png}}
+	\makebox[\textwidth]{\includegraphics[width=\textwidth]{Mockup Screens/My Profile.png}}
+	\caption{Οθόνη "My Profile" λειτουργικότητας}
+	\label{Οθόνη "My Profile" λειτουργικότητας}
+\end{figure}
+
+Στην οθόνη αυτή υπάρχουν κουμπιά edit δίπλα από κάθε στοιχείο, που θα επιτρέπουν στον χρήστη να κάνει αλλαγές. Επίσης θα μπορεί να αλλάξει τον κωδικό του, όπου θα πρέπει να εισάγει πρώτα τον παλιό του κωδικό, και μετά δύο φορές τον νέο πριν επιβεβαιώσει την αλλαγή. 
+
+Με το κουμπί "Manage" δίπλα στο "Balance" εμφανίζεται επίσης ένα pop up όπου ο χρήστης έχει την επιλογή να προσθέσει ή να αφαιρέσει λεφτά στον/από τον λογαριασμό του. Η οθόνη αυτή φαίνεται στο σχήμα \ref{Οθόνη "Balance" λειτουργικότητας}.
+
+\begin{figure}[H]
+    \makebox[\textwidth]{\fbox{\includegraphics[width=\textwidth]{Mockup Screens/Balance.png}}}
 	\caption{Οθόνη "Balance" λειτουργικότητας}
 	\label{Οθόνη "Balance" λειτουργικότητας}
 \end{figure}
-
-Παρατηρούμε ότι η οθόνη αυτή περιέχει κουμπιά "Add Money" και "Remove Balance" για την προσθήκη και αφαίρεση χρηματικού ποσού από τον λογαριασμό αντίστοιχα.
-
-Στη μέση της οθόνης υπάρχει ένα πεδίο "Balance" στο οποίο φαίνεται το ποσό που έχει διαθέσιμο ο χρήστης στον λογαριασμό του (έχουν αφαιρεθεί οι προκαταβολές και οι ανταμοιβές για αιτήσεις, τα οποία όμως μπορούν να επιστραφούν στο μέλλον).
 
 \section{Συμμετοχή και Ρόλοι στη Συγγραφή του Κειμένου}
 
@@ -219,11 +233,11 @@
 \section{Αλλαγές από έκδοση σε έκδοση}
 
 \subsection{Από έκδοση v0.1 σε έκδοση v0.2}
-\subsubsection{Αλλαγές στη περιγραφή}
 \begin{itemize}
     \item Αναδόμηση του κειμένου της περιγραφής ώστε να είναι χωρισμένο σε τμήματα και πιο ευανάγνωστο. 
     \item Προσθήκη του συστήματος των ειδοποιήσεων.
     \item Προσθήκη παραπάνω διευκρινήσεων σχετικά με τη λειτουργικότητα των αιτήσεων και των αναζητήσεων.
+    \item Ανανέωση όλων των mock-up screens.
 \end{itemize}
 
 \end{document}
