Corrected small mistakes, ready to send!

--- a/1ο Παραδοτέο/Project-Description/v0.2/Files/Project-description-v0.2.tex
+++ b/1ο Παραδοτέο/Project-Description/v0.2/Files/Project-description-v0.2.tex
@@ -85,11 +85,11 @@
 
 \textbf{Σημέιωση:} Οι οθόνες στο κεφάλαιο αυτό είναι ενδεικτικές και δεν θα αποτελούν αναγκαστικά την ακριβή δομή του τελικού project. Λειτουργούν παραπάνω για ένδειξη του περιεχομένου της τελικής οθόνης και όροι όπως "στο κάτω μέρος της οθόνης" αναφέρονται μόνο στη δομή του σχήματος που δίνεται και όχι αναγκαστικά του τελικού project.
 
-\subsection{Search Book}
+\subsection{Search}
 
 Για την οθόνη της αναζήτησης έχουμε ορίσει τρεις περιπτώσεις (με βάση τα φίλτρα που εισάγει ο χρήστης), οι οποίες αποτελούν τα σχήματα \ref{Οθόνη "Search Book" λειτουργικότητας},
 
-\subsubsection{Αναζήτηση Βιβλίου}
+\subsubsection{Search Book}
 
 Στο Σχήμα \ref{Οθόνη "Search Book" λειτουργικότητας} παρουσιάζεται mock-up οθόνη της λειτουργικότητας της αναζήτησης βιβλίων και της δημιουργίας αίτησης ενοικίασης.
 
@@ -200,6 +200,18 @@
 	\caption{Οθόνη "Comment Rating" λειτουργικότητας}
 	\label{Οθόνη "Comment Rating" λειτουργικότητας}
 \end{figure}
+
+\subsection{Notifications:}
+
+Στο Σχήμα \ref{Οθόνη "Notifications" λειτουργικότητας} παρουσιάζεται mock-up οθόνη της λειτουργικότητας της προβολής ειδοποιήσεων, που δημιουργούνται αυτόματα όταν ένας "αγαπημένος" χρήστης του χρήστη προσθέτει ένα νέο βιβλίο προς ενοικίαση από άλλους ή προσθέτει μια νέα αίτηση.
+
+\begin{figure}[H]
+	\makebox[\textwidth]{\includegraphics[width=\textwidth]{Mockup Screens/Notifications.png}}
+	\caption{Οθόνη "Notifications" λειτουργικότητας}
+	\label{Οθόνη "Notifications" λειτουργικότητας}
+\end{figure}
+
+Στην οθόνη αυτή υπάρχει ένα κουμπί αφαίρεσης του χρήστη από τη λίστα αγαπημένων, οπότε μετά από αυτό δεν θα εμφανίζονται πλέον ειδοποιήσεις σχετικές με αυτόν τον χρήστη.
 
 \subsection{Profile και Balance}
 
