Corrected Search use-case and robustness diagram

--- a/2ο Παραδοτέο/Use-Cases/v0.2/Files/Use-cases-v0.2.tex
+++ b/2ο Παραδοτέο/Use-Cases/v0.2/Files/Use-cases-v0.2.tex
@@ -57,15 +57,16 @@
 
 \subsection{Αναζήτηση βιβλίων / χρήστη / αιτήσεων}
 
-\subsubsection*{Βασική Ροή <<Αναζήτηση βιβλίων / χρήστη / αιτήσεων>>: Αναζήτηση βιβλίων:}
+\subsubsection*{Βασική Ροή <<Αναζήτηση βιβλίων / χρήστη / αιτήσεων>>: Αναζήτηση βιβλίων με δια ζώσης συναλλαγή:}
 \begin{enumerate}
-    \item Ο χρήστης επιλέγει φίλτρο αναζήτησης "βιβλία", με τύπο συναλλαγής "και τα δύο" (δηλαδή και δια ζώσης και ταχυδρομικώς) και εισάγει ένα κείμενο αναζήτησης (μπορεί να είναι και τίτλος βιβλίου και όνομα συγγραφέα).
+    \item Ο χρήστης επιλέγει φίλτρο αναζήτησης "βιβλία", με τύπο συναλλαγής "δια ζώσης" και εισάγει ένα κείμενο αναζήτησης (μπορεί να είναι και τίτλος βιβλίου και όνομα συγγραφέα).
         \label{Επιλογή τύπου αναζήτησης}
     \item Το σύστημα ελέγχει αν υπάρχουν διαθέσιμα βιβλία προς ενοικίαση που να πληρούν το κείμενο αναζήτησης και το τύπο συναλλαγής και βλέπει ότι υπάρχουν.
         \label{Ύπαρξη βιβλίου}
     \item Το σύστημα δείχνει τη λίστα με τα διαθέσιμα βιβλία στον χρήστη, περιέχοντας τους πλήρεις τίτλους, το όνομα συγγραφέα, τον εκδοτικό οίκο και έτος τύπωσης.
     \item Ο χρήστης επιλέγει ένα από τα βιβλία.
     \item Το σύστημα φορτώνει τη λίστα των ιδιοκτητών που προσφέρουν το βιβλίο που επιλέχθηκε και την προβάλλει στον χρήστη, μαζί με την τιμή του βιβλίου ανά μέρα, την πόλη που μένει ο κάθε χρήστης, το σκορ του (που προκύπτει από τα ratings άλλων χρηστών) και κουμπί που του επιτρέπει να κάνει αίτηση ενοικίασης του βιβλίου στον χρήστη αυτόν.
+    \item Ο χρήστης μεταφέρεται στο use case "Ενοικίαση βιβλίου από άλλο χρήστη με συναλλαγή δια ζώσης".
 \end{enumerate}
 
 \subsubsection*{Εναλλακτική Ροή 1: Αναζήτηση χρήστη - Αυτός υπάρχει:}
@@ -73,6 +74,7 @@
     \item[\ref{Επιλογή τύπου αναζήτησης}.α.1.] Ο χρήστης επιλέγει φίλτρο αναζήτησης "χρήστης" και εισάγει ένα κείμενο αναζήτησης (το username του χρήστη που αναζητεί).
     \item[\ref{Επιλογή τύπου αναζήτησης}.α.2.] Το σύστημα ελέγχει αν υπάρχει άλλος χρήστης με το όνομα που ζήτησε ο χρήστης και βλέπει ότι υπάρχει.
     \item[\ref{Επιλογή τύπου αναζήτησης}.α.3.] Το σύστημα προβάλλει στον χρήστη το προφίλ του χρήστη που αναζήτησε, δηλαδή το username, το rating του, την τοποθεσία που μένει και το description που έχει ορίσει για τον λογαριασμό του. Επίσης προβάλλει ένα κουμπί προσθήκης χρήστη στη λίστα των αγαπημένων (το οποίο χρησιμοποιείται για το use case των notifications και αγαπημένων).
+    \item[\ref{Επιλογή τύπου αναζήτησης}.α.4.] Ο χρήστης μεταφέρεται στο use case "Επεξεργασία λίστας αγαπημένων και χρήση συστήματος ειδοποιήσεων".
 \end{enumerate}
 
 \subsubsection*{Εναλλακτική Ροή 2: Αναζήτηση χρήστη - Αυτός δεν υπάρχει:}
@@ -82,13 +84,14 @@
     \item[\ref{Επιλογή τύπου αναζήτησης}.β.3.] Το σύστημα ενημερώνει τον χρήστη ότι ο χρήστης που αναζητεί δεν υπάρχει.
 \end{enumerate}
 
-\subsubsection*{Εναλλακτική Ροή 3: Αναζήτηση αίτησης - Αυτή υπάρχει:}
+\subsubsection*{Εναλλακτική Ροή 3: Αναζήτηση αίτησης με δια ζώσης συναλλαγή - Αυτή υπάρχει:}
 \begin{enumerate}
     \item[\ref{Επιλογή τύπου αναζήτησης}.γ.1.] Ο χρήστης επιλέγει φίλτρο αναζήτησης "αιτήσεις", με τύπο συναλλαγής "και τα δύο", και εισάγει ένα κείμενο αναζήτησης (το όνομα του βιβλίου για το οποίο αναζητά αν υπάρχουν αιτήσεις).
     \item[\ref{Επιλογή τύπου αναζήτησης}.γ.2.] Το σύστημα ελέγχει αν υπάρχει αίτηση που να πληρεί τα κριτήρια αναζήτησης που ζήτησε ο χρήστης και διαπιστώνει ότι υπάρχει.
     \item[\ref{Επιλογή τύπου αναζήτησης}.γ.3.] Το σύστημα δείχνει τη λίστα με τα βιβλία για τα οποία υπάρχουν αιτήσεις που πληρούν τα κριτήρια αναζήτησης στον χρήστη, περιέχοντας τους πλήρεις τίτλους, το όνομα συγγραφέα, τον εκδοτικό οίκο και έτος τύπωσης.
     \item[\ref{Επιλογή τύπου αναζήτησης}.γ.4.] Ο χρήστης επιλέγει ένα από τα βιβλία.
     \item[\ref{Επιλογή τύπου αναζήτησης}.γ.5.] Το σύστημα φορτώνει τη λίστα των χρηστών που έχουν κάνει αίτηση για το βιβλίο που επιλέχθηκε και την προβάλλει στον χρήστη, μαζί με την τιμή που προτίθενται να πληρώσει ο κάθε χρήστης για το βιβλίο ανά μέρα, την πόλη που μένει ο καθένας, το σκορ τους και κουμπί που του επιτρέπει να κάνει αποδοχή της αίτησης.
+    \item[\ref{Επιλογή τύπου αναζήτησης}.γ.6.] Ο χρήστης μεταφέρεται στο use case "Ενοικίαση βιβλίου από άλλο χρήστη με συναλλαγή δια ζώσης" (από τη μεριά του ιδιοκτήτη).
 \end{enumerate}
 
 \subsubsection*{Εναλλακτική Ροή 4: Αναζήτηση αίτησης - Αυτή δεν υπάρχει:}
@@ -98,36 +101,25 @@
     \item[\ref{Επιλογή τύπου αναζήτησης}.δ.3.] Το σύστημα ενημερώνει τον χρήστη ότι δεν υπάρχει αίτηση που να πληρεί τα κριτήρια αναζήτησης.
 \end{enumerate}
 
-\subsubsection*{Εναλλακτική Ροή 5: Αναζήτηση βιβλίου - Μόνο δια ζώσης}
+\subsubsection*{Εναλλακτική Ροή 5: Αναζήτηση βιβλίου - Ταχυδρομική συναλλαγή}
 \begin{enumerate}
     \item[\ref{Επιλογή τύπου αναζήτησης}.ε.1.] Ο χρήστης επιλέγει φίλτρο αναζήτησης "βιβλία", με τύπο συναλλαγής "μόνο δια ζώσης" και εισάγει ένα κείμενο αναζήτησης (μπορεί να είναι και τίτλος βιβλίου και όνομα συγγραφέα).
-    \item[\ref{Επιλογή τύπου αναζήτησης}.ε.2.] Η περίπτωση χρήσης συνεχίζεται από το βήμα \ref{Ύπαρξη βιβλίου} της βασικής ροής.
+    \item[\ref{Επιλογή τύπου αναζήτησης}.ε.2.] Η περίπτωση χρήσης συνεχίζεται από το βήμα \ref{Ύπαρξη βιβλίου} της βασικής ροής μέχρι και το βήμα 5 (δεν θέλω να το αντιγράψω εδώ).
+    \item[\ref{Επιλογή τύπου αναζήτησης}.ε.3.] Ο χρήστης μεταφέρεται στο use case "Ενοικίαση βιβλίου από άλλο χρήστη με ταχυδρομική συναλλαγή".
 \end{enumerate}
 
-\subsubsection*{Εναλλακτική Ροή 6: Αναζήτηση βιβλίου - Μόνο ταχυδρομικώς:}
-\begin{enumerate}
-    \item[\ref{Επιλογή τύπου αναζήτησης}.στ.1.] Ο χρήστης επιλέγει φίλτρο αναζήτησης "βιβλία", με τύπο συναλλαγής "μόνο ταχυδρομικώς" και εισάγει ένα κείμενο αναζήτησης (μπορεί να είναι και τίτλος βιβλίου και όνομα συγγραφέα).
-    \item[\ref{Επιλογή τύπου αναζήτησης}.στ.2.] Η περίπτωση χρήσης συνεχίζεται από το βήμα \ref{Ύπαρξη βιβλίου} της βασικής ροής.
-\end{enumerate}
-
-\subsubsection*{Εναλλακτική Ροή 7: Αναζήτηση βιβλίου - Αυτό δεν υπάρχει:}
+\subsubsection*{Εναλλακτική Ροή 6: Αναζήτηση βιβλίου - Αυτό δεν υπάρχει:}
 \begin{enumerate}
     \item[\ref{Ύπαρξη βιβλίου}.1.] Το σύστημα ελέγχει αν υπάρχουν διαθέσιμα βιβλία προς ενοικίαση που να πληρούν το κείμενο αναζήτησης και βλέπει ότι δεν υπάρχουν.
     \item[\ref{Ύπαρξη βιβλίου}.2.] Το σύστημα ενημερώνει τον χρήστη ότι δεν υπάρχουν διαθέσιμα βιβλία που να πληρούν τα κριτήρια αναζήτησης. 
 \end{enumerate}
 
-\subsubsection*{Εναλλακτική Ροή 8: Αναζήτηση αίτησης - Μόνο δια ζώσης}
+\subsubsection*{Εναλλακτική Ροή 7: Αναζήτηση αίτησης - Ταχυδρομική συναλλαγή}
 \begin{enumerate}
     \item[\ref{Επιλογή τύπου αναζήτησης}.γ.1.α.1.] Ο χρήστης επιλέγει φίλτρο αναζήτησης "αιτήσεις", με τύπο συναλλαγής "μόνο δια ζώσης", και εισάγει ένα κείμενο αναζήτησης (το όνομα του βιβλίου για το οποίο αναζητά αν υπάρχουν αιτήσεις).
-    \item[\ref{Επιλογή τύπου αναζήτησης}.γ.1.α.2.] Η περίπτωση χρήσης συνεχίζεται από το βήμα 2.γ.1.2 της βασικής ροής.
+    \item[\ref{Επιλογή τύπου αναζήτησης}.γ.1.α.2.] Η περίπτωση χρήσης συνεχίζεται από το βήμα 1.γ.1.2 της βασικής ροής, μέχρι το βήμα 1.γ.1.5 (δεν θέλω να το αντιγράψω εδώ).
+    \item[\ref{Επιλογή τύπου αναζήτησης}.γ.1.α.3.] Ο χρήστης μεταφέρεται στο use case "Ενοικίαση βιβλίου από άλλο χρήστη με ταχυδρομική συναλλαγή" (από τη μεριά του ιδιοκτήτη).
 \end{enumerate}
-
-\subsubsection*{Εναλλακτική Ροή 9: Αναζήτηση αίτησης - Μόνο ταχυδρομικώς:}
-\begin{enumerate}
-    \item[\ref{Επιλογή τύπου αναζήτησης}.γ.1.β.1.] Ο χρήστης επιλέγει φίλτρο αναζήτησης "αιτήσεις", με τύπο συναλλαγής "μόνο ταχυδρομικώς", και εισάγει ένα κείμενο αναζήτησης (το όνομα του βιβλίου για το οποίο αναζητά αν υπάρχουν αιτήσεις).
-    \item[\ref{Επιλογή τύπου αναζήτησης}.γ.1.β.2.] Η περίπτωση χρήσης συνεχίζεται από το βήμα 2.γ.1.2 της βασικής ροής.
-\end{enumerate}
-
 
 \subsection{Ενοικίαση βιβλίου από άλλο χρήστη με συναλλαγή δια ζώσης}
 \label{Rental Use Case}
